--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
-site_name: Özlemcim's Cheatsheets
+site_name: My Dev Notes
 theme:
   name: material
-  language: tr
+  language: en
   palette:
     primary: deep purple
     accent: pink
 nav:
-  - Ana Sayfa: index.md
+  - Homepage: index.md
   - Docker: docker.md
   - Kubernetes: kubernetes.md
   - iOS: ios.md
