Add linux network cheatsheet

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - Homepage: index.md
   - Linux:
       - Linux Cheatsheet: linux/linux-cheatsheet.md
+      - Linux Network Cheatsheet: linux/linux-network-cheatsheet.md
   - Git:
       - Git Cheatsheet: git/git-cheatsheet.md
       - Github Actions: git/github-actions.md
