--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,9 +8,23 @@ theme:
     primary: deep purple
     accent: pink
   features:
+    - announce.dismiss
+    - content.action.edit
+    - content.action.view
+    - content.code.annotate
     - content.code.copy
+    - content.tooltips
+    - navigation.indexes
+    - navigation.sections
+    - navigation.tabs
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
 nav:
-  - Homepage: index.md
+  - Home: index.md
   - Linux:
       - Linux Cheatsheet: linux/linux-cheatsheet.md
       - Linux Network Cheatsheet: linux/linux-network-cheatsheet.md
