--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,18 @@ theme:
   name: material
   language: en
   palette:
-    primary: deep purple
-    accent: pink
+    - scheme: default
+      primary: deep purple
+      accent: pink
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - scheme: slate
+      primary: deep purple
+      accent: pink
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
   features:
     - announce.dismiss
     - content.action.edit
