--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,13 +10,13 @@ theme:
   palette:
     - scheme: default
       primary: deep purple
-      accent: pink
+      accent: purple
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
     - scheme: slate
       primary: deep purple
-      accent: pink
+      accent: purple
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
