--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
   - Java:
       - Jenv: java/jenv.md
   - Docker:
+      - Docker Installation: docker/docker-installation.md
       - Docker Cheatsheet: docker/docker-cheatsheet.md
       - Docker Compose Cheatsheet: docker/docker-compose-cheatsheet.md
       - Docker Examples: docker/docker-examples.md
@@ -105,3 +106,4 @@ nav:
       - Apicurio via Docker: tools/apicurio-via-docker.md
       - KafkaUI via Docker: tools/kafkaui-via-docker.md
       - Multi-Gitter: tools/multi-gitter.md
+      - Multipass: tools/multipass.md
