Add utm windows arm on mac

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,3 +113,4 @@ nav:
       - Multi-Gitter: tools/multi-gitter.md
       - Multipass: tools/multipass.md
       - BloomRPC: tools/bloomrpc.md
+      - UTM Windows ARM on Mac: tools/utm-windows-arm-on-mac.md
