--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
       - Minikube: kubernetes/minikube.md
       - Kubectl: kubernetes/kubectl.md
       - Kubeadm: kubernetes/kubeadm.md
+      - Kubernetes Dashboards: kubernetes/kubernetes-dashboards.md
   - Terraform:
       - Terraform Cheatsheet: terraform/terraform-cheatsheet.md
       - Tfenv: terraform/tfenv.md
