--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ theme:
     - content.code.copy
     - content.tooltips
     - navigation.indexes
-    - navigation.sections
+    #    - navigation.sections
     - navigation.tabs
     - navigation.top
     - navigation.tracking
