Add misc navigation for some network tools

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,3 +149,6 @@ nav:
       - BloomRPC: tools/bloomrpc.md
       - Windows on Mac via UTM: tools/windows-on-mac-via-utm.md
       - Overriding Hostnames: tools/overriding-hostnames.md
+  - Miscellaneous:
+      - Modem Admin & Wi-Fi Passwords: miscellaneous/modem-admin-wifi-passwords.md
+      - Internet Speed & IP: miscellaneous/internet-speed-ip.md
